<resources>
    <string name="app_name">Note It Now</string>
    <string name="search_bar">Я хочу найти...</string>
    <string name="default_note_name">Название заметки</string>
    <string name="pin_btn_decript">Пин заметки</string>
    <string name="edit_btn_decript">Редактировать заметку</string>
    <string name="delete_btn_decript">Удалить заметку</string>
    <string name="add_btn_decript">Добавить заметку</string>
    <string name="note_name">Название заметки</string>
    <string name="default_not_empty_note_name">Заметка с рисунком</string>
    <string name="edit_btn">Редактировать</string>
    <string name="remove_button">Удалить</string>
    <string name="note_text">Пока что тут пусто..</string>
    <string name="clip_btn">Закрепить/Открепить</string>

    <!--    Для экрана настроек-->
    <string name="theme_settings">Настройка темы приложения</string>
    <string name="darcula_theme">Тёмная тема</string>
    <string name="share_btn">Поделиться</string>
    <string name="darcula_theme_not_active">Тёмная тема не активна</string>
    <string name="darcula_theme_active">Тёмная тема активна</string>
    <string name="font_size_chooser">Выберете размер шрифта</string>
    <string name="font_size_title">Размер шрифта</string>
    <string name="font_size_summary">Выбор размера шрифта</string>

    <!--    предупреждения-->
    <string name="activities_not_found">Нет подходящих приложений</string>
    <string name="settings">Настройки</string>
    <string name="notes_capture">Заметки</string>
    <string name="nav_header_subtitle">sofa.byk@mail.ru</string>
    <string name="all_notes">Всего заметок:\ </string>

    <string name="exit">Нажмите ещё раз, чтобы выйти</string>


    <!-- месяцы -->
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>

</resources>